--- a/todo
+++ b/todo
@@ -1,4 +1,11 @@
+//V0.0.1//
+-button transition
+
 //V0.0.2//
 -Select page
--Configure everything
 -separate css/js/html
+-opacity type scroller number
+-box bc picker
+
+//RELEASE//
+full test before upload
