Feature: Add multi-Category Selection

--- a/todo
+++ b/todo
@@ -1,13 +1,10 @@
 Features:
 
--Multi-Category
-
 BUG FIX:
-
-
 
 En plus:
 
 -Check lowest version
 -Isolate assets (css, script)
 -AvAgeVerification-content dynamic transform
+-Fix types comparison coersion
